# RAG_mlops25

./: .gitignore  README.md
rag/: pyproject.toml
rag/src/rag/: docker-compose.yaml
rag/src/rag/backend/: agents.py  api.py  constants.py  data_models.py  pyproject.toml
rag/src/rag/data/: fisk.txt  kanin.txt  krabba.txt  panda.txt  tiger.txt
rag/src/rag/dockerfiles/: backend.dockerfile  frontend.dockerfile
rag/src/rag/explorations/: explore_knowledge_base.ipynb
rag/src/rag/frontend/: app.py
rag/src/rag/knowledge_base/articles.lance/_transactions/: 0-f2f35634-73e8-4caf-b2e6-f7412b12e2ea.txn  1-8f454c08-57c9-42c5-a498-b23839eef6dd.txn  10-a5379f24-e16b-4ade-b313-e58bba5d2ca2.txn  11-a3e42e30-812c-4c4b-9f0b-5356ed5d0bc2.txn  2-33f76d46-7b3d-498e-a35d-5d0b702edd63.txn  3-e8a5fa2d-6852-4467-a04c-720bc60d12b6.txn  4-1f8d423d-7551-41a3-a6bd-33eecd91b9a8.txn  5-ce3a5317-13dc-4311-b16f-ce02f24f10d9.txn  6-7622cb18-3fc2-451a-9838-db87b3f038d2.txn  7-37be4719-c539-426e-bcff-f887f5720e44.txn  8-9a56ab08-4ed9-452c-ad73-dc87437eee11.txn  9-71726c54-8254-459a-8396-27bc07ff237c.txn
rag/src/rag/setup/: ingestion.py
