[project]
name = "rag"
version = "0.1.0"
description = "RAG project"
readme = "README.md"
authors = [
    { name = "kokchun", email = "kokchungiang@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "backend",
 "frontend",
 "ipykernel>=7.2.0",
]

[tool.uv.sources]
backend = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = ["src/rag/frontend", "src/rag/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
